--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <iframe 
     width="560"
      height="315"
-      src="https://www.youtube.com/embed/BkIO89tAOGo?autoplay=1&loop=1&mute=1&autopause=0&background=1&title=0&byline=0&portrait=0"
+      src="https://www.youtube.com/embed/BkIO89tAOGo?autoplay=1&loop=1&mute=1&autopause=0&background=1&title=0&byline=0&portrait=0&rel=0"
       frameborder="0"
         allowfullscreen>
     </iframe>
